--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "smi2/phpclickhouse": "^1.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0",
+        "phpunit/phpunit": "*",
         "friendsofphp/php-cs-fixer": "^3.0",
         "phpstan/phpstan": "^0.12"
     },
